--- a/src/components/choose-us/choose-us.styles.scss
+++ b/src/components/choose-us/choose-us.styles.scss
@@ -8,6 +8,7 @@
 
   .choose-image-cont {
     width: 100%;
+    // height: 430px;
     height: auto;
     border-radius: 10px;
     overflow: hidden;
