--- a/src/components/faq-item/faq-item.styles.scss
+++ b/src/components/faq-item/faq-item.styles.scss
@@ -3,6 +3,11 @@
   margin: 0 0 10px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.041);
 
+  a {
+    color: #fff;
+    font-weight: 450;
+  }
+
   .question {
     display: flex;
     justify-content: space-between;
@@ -21,5 +26,10 @@
     font-size: 14px;
     color: #e6e6e6;
     padding: 5px 0;
+
+    &.contact-link {
+      font-weight: 450;
+      cursor: pointer;
+    }
   }
 }
