--- a/src/components/footer-section/footer-section.styles.scss
+++ b/src/components/footer-section/footer-section.styles.scss
@@ -2,7 +2,21 @@
   width: 90%;
   margin: 150px auto 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+
+  .logo-container {
+    width: 250px;
+    height: auto;
+    margin: 0 80px 0 0;
+
+    .logo {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      cursor: pointer;
+    }
+  }
 
   .segment {
     margin: 0 70px;
@@ -28,7 +42,14 @@
         cursor: pointer;
 
         &:hover {
-          background: linear-gradient(to bottom, #6133a7 0%, #2f1798 100%);
+          background: linear-gradient(
+            to right,
+            #e1a742cb 0%,
+            #d78f55ce 30%,
+            #d07c63db 53%,
+            #c66478b2 60%,
+            #8a097be2 100%
+          );
           -webkit-text-fill-color: transparent;
           -webkit-background-clip: text;
           background-clip: text;
@@ -46,7 +67,7 @@
           cursor: pointer;
 
           &:hover {
-            color: #2f1798;
+            color: #e1a742cb;
           }
         }
       }
