--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -2,10 +2,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 65%;
-  margin: 0 0 0 auto;
-  padding: 20px 0;
+  width: 100%;
+  height: 100px;
+  margin: 0;
   background-color: transparent;
+
+  .logo-container {
+    width: 200px;
+    height: 100%;
+    margin: 0 80px 0;
+
+    .logo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      cursor: pointer;
+    }
+  }
 
   .navlinks {
     display: flex;
